[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (function packages)
upstream = { git = "https://github.com/apache/arrow-datafusion.git", rev = "c9ed34c16e47bd5da58b98f64a017e38ab8c946f", default-features = false, package = "datafusion" }
