[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (function packages)
upstream = { git = "https://github.com/apache/arrow-datafusion.git", rev = "e46920a091473e9414e449770fce4c0bc57c3fa5", default-features = false, package = "datafusion" }
