[package]
name = "delorean_query_benchmarks"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { git = "https://github.com/apache/arrow", version = "0.18.0-SNAPSHOT" }
datafusion = { git = "https://github.com/apache/arrow", version = "0.18.0-SNAPSHOT" }

[dev-dependencies]
criterion = "0.3"
