[package]
name = "influxdb2_client"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"

[features]
default = ["derive"]

derive = ["influxdb2_client_derive"]

[dependencies]
bytes = { version = "0.5.4", default-features = false }
futures = { version = "0.3.5", default-features = false }
influxdb2_client_core = { version = "0.1.0", path = "influxdb2_client_core", default-features = false }
influxdb2_client_derive = { version = "0.1.0", path = "influxdb2_client_derive", default-features = false, optional = true }
reqwest = { version = "0.10.1", default-features = false, features = ["stream"] }
snafu = "0.6.6"

[dev-dependencies]
mockito = "0.26.0"
tokio = { version = "0.2", features = ["full"] }
