[package]
name = "observer"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2018"
description = "A CLI tool for observing an IOx server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow_deps = { path = "../arrow_deps" }
async-trait = "0.1"
influxdb_iox_client = { path = "../influxdb_iox_client", features=["flight"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
rustyline = "8.0.0"
clap = "2.33.1"
structopt = "0.3.21"
